remove unused code in ClassDefinition2UMLService

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -27,4 +27,9 @@ services:
 
     UMLGenerationBundle\Service\PrinterService: ~
 
-    UMLGenerationBundle\Service\ClassDefinition2UMLService: ~
+    UMLGenerationBundle\Service\ClassDefinition2UMLService:
+        arguments:
+            $fieldDefinitionHandlers:
+                - '@UMLGenerationBundle\Handler\FieldDefinition\ManyToOneRelationHandler'
+                - '@UMLGenerationBundle\Handler\FieldDefinition\ManyToManyRelationHandler'
+                - '@UMLGenerationBundle\Handler\FieldDefinition\ReverseObjectRelationHandler'
