--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "autoload": {
     "psr-4": {
-      "UMLGenerationBundle\\": "src/"
+      "UMLGenerationBundle\\": "src"
     },
     "exclude-from-classmap": [
       "/tests/"
@@ -27,12 +27,13 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "UMLGenerationBundle\\Tests\\": "tests/"
+      "UMLGenerationBundle\\Tests\\Unit\\": "tests/Unit/",
+      "UMLGenerationBundle\\Tests\\Integration\\": "tests/Integration/"
     }
   },
   "require": {
-    "php": ">=7.4 || ~8.0.0",
-    "pimcore/pimcore": "^6.9 || ^10.0"
+    "php": "^8.0",
+    "pimcore/pimcore": "^10.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.8",
@@ -40,8 +41,7 @@
     "phpspec/prophecy-phpunit": "^2.0",
     "phpstan/extension-installer": "^1.1",
     "jangregor/phpstan-prophecy": "^1.0",
-    "phpunit/phpunit": "^9.5",
-    "dg/bypass-finals": "^1.3"
+    "phpunit/phpunit": "^9.5"
   },
   "extra": {
     "pimcore": {
@@ -54,7 +54,7 @@
     "fix-cs": "php-cs-fixer fix",
     "checkstyle": "php-cs-fixer fix --dry-run --diff",
     "phpstan": "phpstan analyse --level=${PHPSTAN_LEVEL:-8} -c phpstan.neon",
-    "phpstan-gitlab": "phpstan analyse -c phpstan.neon --memory-limit=1G --no-progress --level=${PHPSTAN_LEVEL:-8} --error-format=gitlab > tmp/codeclimate.json",
-    "unit-tests": "phpunit --coverage-text --colors=never --log-junit=tmp/coverage.xml --coverage-clover=tmp/clover.xml --coverage-html=tmp/coverage"
+    "phpstan-gitlab": "phpstan analyse -c phpstan.neon --memory-limit=1G --no-progress --level=${PHPSTAN_LEVEL:-8} --error-format=gitlab > reports/codeclimate.json",
+    "tests": "phpunit --coverage-text --colors=never --log-junit=reports/coverage.xml --coverage-clover=reports/clover.xml --coverage-html=reports/coverage tests"
   }
 }
