--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -36,4 +36,4 @@ jobs:
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
     - name: Run test suite
-      run: composer unit-tests
+      run: composer tests
