--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     working_dir: /app
     user: ${USER_ID:-1000}
     environment:
-      XDEBUG_MODE: debug
+      XDEBUG_MODE: coverage
     expose:
       - 9003 # xdebug 3 port!
