--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   build:
+    name: Build
 
     runs-on: ubuntu-latest
 
@@ -32,9 +33,12 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
-    - name: Check CS-Fixer
-      run: composer fix-cs:check
+  tests:
+    name: Tests
 
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Run test suite
       uses: codecov/codecov-action@v2
       run: composer tests
@@ -43,5 +47,14 @@ jobs:
         files: reports/clover.xml
         verbose: true
 
+  quality:
+    name: Quality Assurance
+
+    runs-on: ubuntu-latest
+
+    - name: Check CS-Fixer
+      run: composer fix-cs:check
+
+
     - name: Check PHPStan
-      run: composer phpstan-gitlab
+    run: composer phpstan-gitlab
