--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
   },
   "require": {
     "php": "^8.0",
-    "pimcore/pimcore": "^10.0"
+    "pimcore/pimcore": "^10.0 || ^11.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.8",
