--- a/composer.json
+++ b/composer.json
@@ -52,8 +52,8 @@
     }
   },
   "scripts": {
-    "fix-cs:fix": "php-cs-fixer fix",
-    "fix-cs:check": "php-cs-fixer fix --dry-run --diff",
+    "cs:fix": "php-cs-fixer fix",
+    "cs:check": "php-cs-fixer fix --dry-run --diff",
     "phpstan": "phpstan analyse --level=${PHPSTAN_LEVEL:-8} -c phpstan.neon",
     "phpstan-gitlab": "phpstan analyse -c phpstan.neon --memory-limit=1G --no-progress --level=${PHPSTAN_LEVEL:-8} --error-format=gitlab > reports/codeclimate.json",
     "tests": "phpunit --coverage-text --colors=never --log-junit=reports/junit.xml --coverage-clover=reports/clover.xml --coverage-html=reports/coverage tests"
