--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     }
   },
   "require": {
-    "php": "^8.0",
+    "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
     "pimcore/pimcore": "^10.0 || ^11.0"
   },
   "require-dev": {
